Converted database code to work with Postgres

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -296,13 +296,19 @@ play.evolutions {
   autoApply = true
 }
 
-
+#slick.dbs {
+#  default.driver = "slick.driver.H2Driver$" # You must provide the required Slick driver!
+#  default.db.driver = org.h2.Driver
+#  default.db.url = "jdbc:h2:mem:play"
+#  default.db.user = sa
+#  default.db.password = ""
+#}
 
 slick.dbs {
-  default.driver = "slick.driver.H2Driver$" # You must provide the required Slick driver!
-  default.db.driver = org.h2.Driver
-  default.db.url = "jdbc:h2:mem:play"
-  default.db.user = sa
+  default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
+  default.db.driver = "org.postgresql.Driver"
+  default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
+  default.db.user = postgres
   default.db.password = ""
 }
 
