--- a/conf/application.conf
+++ b/conf/application.conf
@@ -206,82 +206,6 @@ play.cache {
   #bindCaches = ["db-cache", "user-cache", "session-cache"]
 }
 
-## Filters
-# https://www.playframework.com/documentation/latest/Filters
-# ~~~~~
-# There are a number of built-in filters that can be enabled and configured
-# to give Play greater security.  You must enable this by adding to build.sbt:
-#
-# libraryDependencies += filters
-#
-play.filters {
-  ## CORS filter configuration
-  # https://www.playframework.com/documentation/latest/CorsFilter
-  # ~~~~~
-  # CORS is a protocol that allows web applications to make requests from the browser
-  # across different domains.
-  # NOTE: You MUST apply the CORS configuration before the CSRF filter, as CSRF has
-  # dependencies on CORS settings.
-  cors {
-    # Filter paths by a whitelist of path prefixes
-    #pathPrefixes = ["/some/path", ...]
-
-    # The allowed origins. If null, all origins are allowed.
-    #allowedOrigins = ["http://www.example.com"]
-
-    # The allowed HTTP methods. If null, all methods are allowed
-    #allowedHttpMethods = ["GET", "POST"]
-  }
-
-  ## CSRF Filter
-  # https://www.playframework.com/documentation/latest/ScalaCsrf#Applying-a-global-CSRF-filter
-  # https://www.playframework.com/documentation/latest/JavaCsrf#Applying-a-global-CSRF-filter
-  # ~~~~~
-  # Play supports multiple methods for verifying that a request is not a CSRF request.
-  # The primary mechanism is a CSRF token. This token gets placed either in the query string
-  # or body of every form submitted, and also gets placed in the users session.
-  # Play then verifies that both tokens are present and match.
-  csrf {
-    # Sets the cookie to be sent only over HTTPS
-    #cookie.secure = true
-
-    # Defaults to CSRFErrorHandler in the root package.
-    #errorHandler = MyCSRFErrorHandler
-  }
-
-  ## Security headers filter configuration
-  # https://www.playframework.com/documentation/latest/SecurityHeaders
-  # ~~~~~
-  # Defines security headers that prevent XSS attacks.
-  # If enabled, then all options are set to the below configuration by default:
-  headers {
-    # The X-Frame-Options header. If null, the header is not set.
-    #frameOptions = "DENY"
-
-    # The X-XSS-Protection header. If null, the header is not set.
-    #xssProtection = "1; mode=block"
-
-    # The X-Content-Type-Options header. If null, the header is not set.
-    #contentTypeOptions = "nosniff"
-
-    # The X-Permitted-Cross-Domain-Policies header. If null, the header is not set.
-    #permittedCrossDomainPolicies = "master-only"
-
-    # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
-  }
-
-  ## Allowed hosts filter configuration
-  # https://www.playframework.com/documentation/latest/AllowedHostsFilter
-  # ~~~~~
-  # Play provides a filter that lets you configure which hosts can access your application.
-  # This is useful to prevent cache poisoning attacks.
-  hosts {
-    # Allow requests to example.com, its subdomains, and localhost:9000.
-    #allowed = [".example.com", "localhost:9000"]
-  }
-}
-
 ## Evolutions
 # https://www.playframework.com/documentation/latest/Evolutions
 # ~~~~~
@@ -308,33 +232,7 @@ slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
   default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
+  default.db.url = ${DATABASE_URL}
   default.db.user = postgres
   default.db.password = ""
-}
-
-## JDBC Datasource
-# https://www.playframework.com/documentation/latest/JavaDatabase
-# https://www.playframework.com/documentation/latest/ScalaDatabase
-# ~~~~~
-# Once JDBC datasource is set up, you can work with several different
-# database options:
-#
-# Slick (Scala preferred option): https://www.playframework.com/documentation/latest/PlaySlick
-# JPA (Java preferred option): https://playframework.com/documentation/latest/JavaJPA
-# EBean: https://playframework.com/documentation/latest/JavaEbean
-# Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
-#
-db {
-  # You can declare as many datasources as you want.
-  # By convention, the default datasource is named `default`
-
-  # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  #default.driver = org.h2.Driver
-  #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
-
-  # You can turn on SQL logging for any datasource
-  # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
 }
