Set the database url from a config var if it exists

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -232,7 +232,7 @@ slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
   default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
-  default.db.url = ${DATABASE_URL}
+  default.db.url = ${?DATABASE_URL}
   default.db.user = postgres
   default.db.password = ""
 }
