--- a/conf/application.conf
+++ b/conf/application.conf
@@ -231,8 +231,8 @@ play.evolutions {
 slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
-  default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
-  default.db.url = ${?DATABASE_URL}
+  #default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
+  default.db.url = ${DATABASE_URL}
   default.db.user = postgres
   default.db.password = ""
 }
