Set up config to allow heroku to override the database settings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -220,19 +220,15 @@ play.evolutions {
   autoApply = true
 }
 
-#slick.dbs {
-#  default.driver = "slick.driver.H2Driver$" # You must provide the required Slick driver!
-#  default.db.driver = org.h2.Driver
-#  default.db.url = "jdbc:h2:mem:play"
-#  default.db.user = sa
-#  default.db.password = ""
-#}
-
 slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
-  #default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
-  default.db.url = ${JDBC_DATABASE_URL}
-  default.db.user = ${JDBC_DATABASE_USERNAME}
-  default.db.password = ${JDBC_DATABASE_PASSWORD}
+  default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
+  default.db.user="postgres"
+  default.db.password = ""
+
+  # Allow heroku to override
+  default.db.url = ${?JDBC_DATABASE_URL}
+  default.db.user = ${?JDBC_DATABASE_USERNAME}
+  default.db.password = ${?JDBC_DATABASE_PASSWORD}
 }
