Now reading the API base url from setting in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -220,6 +220,11 @@ play.evolutions {
   autoApply = true
 }
 
+api {
+  baseURI = "http://localhost:9001/epaye"
+  baseURI = ${?API_BASE_URI}
+}
+
 slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
