Upated to new API url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -221,8 +221,8 @@ play.evolutions {
 }
 
 api {
-  baseURI = "http://localhost:9001/epaye"
-  baseURI = ${?API_BASE_URI}
+  host = "http://localhost:9001"
+  host = ${?API_HOST}
 }
 
 slick.dbs {
