Fixed the logback config and the location of the evolutions files. Changed to localhost for the database server in dev now that I have Docker for Mac in use

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -228,7 +228,7 @@ api {
 slick.dbs {
   default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
   default.db.driver = "org.postgresql.Driver"
-  default.db.url = "jdbc:postgresql://dockerhost:32768/taxservice"
+  default.db.url = "jdbc:postgresql://localhost:32768/taxservice"
   default.db.user="postgres"
   default.db.password = ""
 
