Access tokens are now stored in Mongo

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,7 @@ play.crypto.secret = "YkJMLwA94Mjt1bd^>1kWRKbFcmYGTns=?=KznDEV6ICTxRf_MZ0Pyjb4:?
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 mongodb.uri = "mongodb://das-mock-api:CVH-UXe-FVA-h5P@ds042459.mlab.com:42459/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
+mongodb.uri = "mongodb://localhost:27017/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
 
 
 ## Internationalisation
