Converted the handling of application secrets to mongo

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,10 +6,13 @@
 # This must be changed for production, but we don't recommend you change it in this file.
 play.crypto.secret = "YkJMLwA94Mjt1bd^>1kWRKbFcmYGTns=?=KznDEV6ICTxRf_MZ0Pyjb4:?XiH;7v"
 
+
+play.http.filters=uk.gov.bis.taxserviceMock.filters.Filters
+
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 mongodb.uri = "mongodb://das-mock-api:CVH-UXe-FVA-h5P@ds042459.mlab.com:42459/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
-mongodb.uri = "mongodb://localhost:27017/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
+#mongodb.uri = "mongodb://localhost:27017/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
 
 
 ## Internationalisation
@@ -21,37 +24,4 @@ mongodb.uri = "mongodb://localhost:27017/api_test_data?authMode=scram-sha1&rm.tc
 play.i18n {
   # The application languages
   langs = [ "en" ]
-}
-
-
-## Evolutions
-# https://www.playframework.com/documentation/latest/Evolutions
-# ~~~~~
-# Evolutions allows database scripts to be automatically run on startup in dev mode
-# for database migrations. You must enable this by adding to build.sbt:
-#
-# libraryDependencies += evolutions
-#
-play.evolutions {
-  # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
-  autoApply = true
-}
-
-api {
-  host = "http://localhost:9001"
-  host = ${?API_HOST}
-}
-
-slick.dbs {
-  default.driver = "slick.driver.PostgresDriver$" # You must provide the required Slick driver!
-  default.db.driver = "org.postgresql.Driver"
-  default.db.url = "jdbc:postgresql://localhost:32768/taxservice"
-  default.db.user="postgres"
-  default.db.password = ""
-
-  # Allow heroku to override
-  default.db.url = ${?JDBC_DATABASE_URL}
-  default.db.user = ${?JDBC_DATABASE_USERNAME}
-  default.db.password = ${?JDBC_DATABASE_PASSWORD}
 }
