Grant scope now does better error handling.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,7 @@ play.http.filters=uk.gov.bis.taxserviceMock.filters.Filters
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 mongodb.uri = "mongodb://das-mock-api:CVH-UXe-FVA-h5P@ds042459.mlab.com:42459/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
-mongodb.uri = "mongodb://localhost:27017/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
+#mongodb.uri = "mongodb://hadron.local:27017/api_test_data?authMode=scram-sha1&rm.tcpNoDelay=true"
 
 
 ## Internationalisation
