--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,6 @@ test:
   override:
     - sbt coverage test:test
   post:
-    - sbt coverageReport coverageAggregate codacyCoverage
+    - sbt coverageReport coverageAggregate
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/test-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
